--- a/index.html
+++ b/index.html
@@ -1,30 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Showcase</title>
-    <link rel="stylesheet" href="css/style.css" class="rel">
-</head>
-<body>
-<nav>
-    <a href="">Home</a>
-    <a href="#about">About</a>
-    <a href="#gallery">Gallery</a>
-</nav>
-<main>
-    <div class="left">
-        <h1>Spooky Marley</h1>
-        <p>Stel je voor: een futuristische wereld waarin melodieën worden geweven door kunstmatige intelligentie en ritmes worden
-        gesmeed door metalen handen. Welkom in de verbluffende dimensie van de Muziekbots! Deze technologische wonderen betreden
-        het podium met verbluffende precisie en passie, om ons mee te nemen op een reis door een symfonie van elektronische
-        klanken. Bereid je voor op een adembenemende ervaring, waar mens en machine één worden in een harmonieus samenspel van
-        geluid en innovatie. Het is tijd om de toekomst van muziek te omarmen, want de Muziekbots zijn hier om je ziel te
-        beroeren en je te laten dansen op de maat van de toekomst! 🎶🤖💫</p>
-    </div>
-    <div class="right">
-        <img src="./assets/cropped-favicon.webp" alt="">
-    </div>
-</main>
-</body>
+    <link rel="stylesheet" href="css/style.css" class="rel" />
+  </head>
+  <body>
+    <nav>
+      <a href="">Home</a>
+      <a href="#about">About</a>
+      <a href="#cards">Images</a>
+    </nav>
+    <main>
+      <section class="hero">
+        <div class="left">
+          <h1>Spooky Marley</h1>
+          <p>
+            Stel je voor: een futuristische wereld waarin melodieën worden
+            geweven door kunstmatige intelligentie en ritmes worden gesmeed door
+            metalen handen. Welkom in de verbluffende dimensie van de
+            Muziekbots! Deze technologische wonderen betreden het podium met
+            verbluffende precisie en passie, om ons mee te nemen op een reis
+            door een symfonie van elektronische klanken. Bereid je voor op een
+            adembenemende ervaring, waar mens en machine één worden in een
+            harmonieus samenspel van geluid en innovatie. Het is tijd om de
+            toekomst van muziek te omarmen, want de Muziekbots zijn hier om je
+            ziel te beroeren en je te laten dansen op de maat van de toekomst!
+            🎶🤖💫
+          </p>
+        </div>
+        <div class="right">
+          <img src="./assets/cropped-favicon.webp" alt="" />
+        </div>
+      </section>
+      <section id="about" class="about">
+        <h2>Over ons product</h2>
+        <p>
+          Bij Marley in the Box geloven we in de harmonie die muziek kan brengen in het
+          leven van mensen. Onze toewijding aan deze overtuiging heeft ons
+          geleid tot de ontwikkeling van een buitengewone robot, speciaal
+          ontworpen voor iedereen die een diepe liefde voor muziek deelt.
+        </p>
+      </section>
+      <section id="cards" class="cards">
+        <article>
+            <img src="./assets/idea.jpg" alt="test">
+            <h3>Idea</h3>
+            <p>We zijn begonnen met een idee om een muziekdoosje te maken die openklapt via een sensor</p>
+        </article>
+        <article>
+            <img src="./assets/concept.jpg" alt="test">
+            <h3>Concept</h3>
+            <p>Hier zie je al dat die beter aangekleed is en een groene vacht heeft gekregen voor wat meer aankleding</p>
+        </article>
+        <article>
+            <img src="./assets/result.jpg" alt="test">
+            <h3>Result</h3>
+            <p>Het resultaat is een robot die open gaat met muziek via een motor, waarbij hij leuk aangekleed is.</p>
+        </article>
+      </section>
+    </main>
+  </body>
 </html>
